--- a/Stage1/makefile
+++ b/Stage1/makefile
@@ -1,5 +1,5 @@
 # Ivan Fedorov, 23735464 - Operating Systems Project 1
-# ca216/customshell
+# csc1021/customshell
 
 customshell: command-2.c parse.h
 	gcc -Wall command-2.c -I . -o bin/customshell
