added acknowledgement of DCU academic integrity policy to every file

--- a/Stage2/.gitignore
+++ b/Stage2/.gitignore
@@ -1,3 +1,8 @@
+/*
+    Ivan Fedorov
+    23735465
+    I acknowledge the DCU Academic Integrity Policy
+*/
 # ignore temporary files and executables
 input.txt
 bin/customshell
